<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.autoclicker.app.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.autoclicker.app.ui.profile.ProfileFragment"
        android:label="@string/nav_profiles"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/macroEditorFragment"
        android:name="com.autoclicker.app.ui.editor.MacroEditorFragment"
        android:label="@string/nav_editor"
        tools:layout="@layout/fragment_macro_editor" />

    <fragment
        android:id="@+id/statusFragment"
        android:name="com.autoclicker.app.ui.status.StatusFragment"
        android:label="@string/nav_status"
        tools:layout="@layout/fragment_status" />

</navigation>
